--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id = "container">
-<h1>Image Rollovers and Lightbox</h1>
+<h1>Image Lightbox</h1>
 <div id="gallery">
   <a href="images/large/blue.jpg" data-title = "Blue Scene"    data-lightbox="flowers"><img src="images/small/blue.jpg" width="70" height="70" alt="Blue"></a>
   <a href="images/large/yellow.jpg" data-title = "Yellow Scene"    data-lightbox="flowers"> <img src="images/small/yellow.jpg" width="70" height="70" alt="Yellow"/ </a>
